@@ -1,10 +1,8 @@
 # Generated by roxygen2: do not edit by hand
 
-export(colAnyMissings)
 export(colMaxs)
 export(colMins)
 export(colRanges)
-export(rowAnyMissings)
 export(rowMaxs)
 export(rowMins)
 export(rowRanges)
